// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Layout Nav name links 1`] = `
<div
  className="section section-dark"
  style={
    Object {
      "alignItems": "center",
      "display": "flex",
      "flexFlow": "column nowrap",
      "height": "100%",
      "justifyContent": "center",
      "paddingTop": "300px",
      "width": "100%",
    }
  }
>
  <header
    role="navigation"
  >
    <nav
      className="nav-container"
      role="navigation"
    >
      <div
        className="nav-content container"
      >
        <div
          className="nav-titleGroup"
        >
          <div
            className="nav-titleGroup-item"
          >
            <a
              href="https://smartertoolsforteachers.org/"
              rel="noopener noreferrer"
              target="_blank"
              title="Smarter Balanced Tools For Teachers"
            >
              <img
                alt="Smarter Balanced Tools for Teachers Logo"
                src="test-file-stub"
              />
            </a>
          </div>
          <div
            className="nav-titleGroup-item"
          >
            <h1
              className="application-title"
            >
              Test
            </h1>
          </div>
        </div>
        <div
          className="nav-linksGroup"
        >
          <a
            aria-current={false}
            className="nav-linksGroup-item"
            href="url1"
            onClick={[Function]}
            onKeyUp={[Function]}
            style={undefined}
          >
            <span
              className=""
            />
             
            Home
          </a>
          <a
            aria-current={false}
            className="nav-linksGroup-item"
            href="url2"
            onClick={[Function]}
            onKeyUp={[Function]}
            style={undefined}
          >
            <span
              className=""
            />
             
            About Test Items
          </a>
          <a
            aria-current={false}
            className="nav-linksGroup-item"
            href="url3"
            onClick={[Function]}
            onKeyUp={[Function]}
            style={undefined}
          >
            <span
              className=""
            />
             
            Browse Items
          </a>
        </div>
      </div>
    </nav>
  </header>
</div>
`;

exports[`Storyshots Layout Nav name no links 1`] = `
<div
  className="section section-dark"
  style={
    Object {
      "alignItems": "center",
      "display": "flex",
      "flexFlow": "column nowrap",
      "height": "100%",
      "justifyContent": "center",
      "paddingTop": "300px",
      "width": "100%",
    }
  }
>
  <header
    role="navigation"
  >
    <nav
      className="nav-container"
      role="navigation"
    >
      <div
        className="nav-content container"
      >
        <div
          className="nav-titleGroup"
        >
          <div
            className="nav-titleGroup-item"
          >
            <a
              href="https://smartertoolsforteachers.org/"
              rel="noopener noreferrer"
              target="_blank"
              title="Smarter Balanced Tools For Teachers"
            >
              <img
                alt="Smarter Balanced Tools for Teachers Logo"
                src="test-file-stub"
              />
            </a>
          </div>
          <div
            className="nav-titleGroup-item"
          >
            <h1
              className="application-title"
            >
              Test
            </h1>
          </div>
        </div>
      </div>
    </nav>
  </header>
</div>
`;
